hphp/hack/test/typecheck/expression_trees/mismatched_types.php.like_types.exp
File "mismatched_types.php", line 6, characters 13-54:
Typing error (Typing[4110])
  File "mismatched_types.php", line 6, characters 13-54:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "mismatched_types.php", line 7, characters 10-16:
Typing error (Typing[4110])
  File "mismatched_types.php", line 7, characters 10-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 34, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "mismatched_types.php", line 8, characters 10-10:
Typing error (Typing[4110])
  File "mismatched_types.php", line 8, characters 10-10:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
